src/parser/snapshots/tests__parse_minimal_no_bool_no_expr.snap
---
source: src/parser/mod.rs
expression: parsed
---
Node {
    ty: Program,
    text_range: 0..28,
    children: [
        Node {
            ty: Identifier,
            text_range: 8..11,
            children: [],
        },
        Node {
            ty: Compound,
            text_range: 12..28,
            children: [
                Node {
                    ty: Decl,
                    text_range: 18..24,
                    children: [
                        Node {
                            ty: Identifier,
                            text_range: 22..23,
                            children: [],
                        },
                    ],
                },
            ],
        },
    ],
}
